styles/Home.module.css
.container {
  min-height: 100vh;
  padding: 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.main {
  width: 100%;
  padding-top: 20vh;
  z-index: 100;
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.projectDiv{
  display: flex;
  flex-direction: column;
  justify-content: center;
  min-height: 74vh;
}
.downArrow{
  margin-bottom: 20px;
}
.footer {
  position: sticky;
  width: 100%;
  height: 100px;
  border-top: 1px solid #eaeaea;
  display: flex;
  justify-content: center;
  align-items: center;
}

.footer img {
  margin-left: 0.5rem;
}

.footer a {
  display: flex;
  justify-content: center;
  align-items: center;
}


.logo {
  height: 1em;
}

@media only screen and (max-width: 500px){
.projectDiv{
}
  
}

